First logic of articles, mongodb docker

--- a/backend/Personal Blog/appsettings.json
+++ b/backend/Personal Blog/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ArticlesDatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ArticlesData",
+    "CollectionName": "Articles"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
