--- a/backend/Personal Blog/Personal Blog.csproj
+++ b/backend/Personal Blog/Personal Blog.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10"/>
+        <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     </ItemGroup>
 
 </Project>
