--- a/backend/Personal Blog/appsettings.json
+++ b/backend/Personal Blog/appsettings.json
@@ -10,5 +10,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "ExpireHours": 2
+  }
 }
