--- a/Personal Blog/appsettings.json
+++ b/Personal Blog/appsettings.json
@@ -1,6 +1,10 @@
 {
-  "ArticlesDatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+  "CurrentDatabase": "PostgreSQL",
+  "ConnectionStrings": {
+    "MongoDB": "mongodb://localhost:27017",
+    "PostgreSQL": "Host=localhost;Port=10000;Database=articlesdb;Username=postgres;Password=postgres"
+  },
+  "ArticlesMongoDBSettings": {
     "DatabaseName": "ArticlesData",
     "CollectionName": "Articles"
   },
